Написал тесты, почистил код, дорписал сервисы и перепроверил апи контроллер